--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "license": "GPL-3.0",
   "dependencies": {
     "express": "^4.15.2",
+    "express-session": "^1.15.6",
+    "express-socket.io-session": "^1.3.3",
     "socket.io": "^2.1.1"
   }
 }
